[package]
name = "tex-packer-core"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Core algorithms and API for packing images into texture atlases (Skyline / MaxRects / Guillotine). Returns pages (RGBA) and metadata (JSON/Plist/templates)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/tex-packer"
homepage = "https://github.com/Latias94/tex-packer"
documentation = "https://docs.rs/tex-packer-core"
keywords = ["texture", "atlas", "packer", "sprites", "bin-packing"]
categories = ["algorithms", "multimedia::images", "graphics"]
authors = ["Latias94"]
exclude = [
    "Cargo.toml.orig",
    "tests/*",
    "benches/*",
    "target/*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = true, features = ["png", "jpeg"] }
xxhash-rust = {version = "0.8.15", features = ["const_xxh3"]}
[features]
default = ["image"]
parallel = ["rayon"]
image = []

[dependencies.rayon]
version = "1.10"
optional = true

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "runtime_strategies"
harness = false
